<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Reader -->
    <string name="cd_reading_settings">Reading settings</string>
    <string name="cd_more_options">More options</string>
    <string name="play_surah">Play surah</string>
    <string name="download_for_offline">Download for offline</string>
    <string name="downloading_percent">Downloading %1$d%%</string>
    <string name="remove_download">Remove download</string>
    <string name="retry_download">Retry download</string>
    <string name="send_to_watch">Send to watch</string>
...
